# wasm-deno-rust-api

./: Cargo.toml  readme.md  server.ts
pkg/: package.json  wasm_deno_rust_api.d.ts  wasm_deno_rust_api.js  wasm_deno_rust_api_bg.d.ts  wasm_deno_rust_api_bg.wasm
src/: lib.rs
