[package]
authors = ["taroosg <root@taroosg.dev>"]
edition = "2018"
name = "wasm-deno-rust-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# num-integer = "0.1"
# rand = "0.8.4"
# serde = {version = "1.0", features = ["derive"]}
# serde_json = "1.0"
# sha3 = "0.8.2"
wasm-bindgen = "=0.2.61"
